:recycle:	refactor : exercicio b alterado porque o anterior tinha estilização com css

--- a/HTML/aula_07/resolucao-exercicio-b.html
+++ b/HTML/aula_07/resolucao-exercicio-b.html
@@ -6,11 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <p class="texto">Exercício de HTML aula 07</p>
+    <h2>Pesquisa no site</h2>
 
-    <div id="container">
-        <span>Tag span 1</span>
-        <span>Tag span 2</span>
-    </div>
+    <form>
+        <label for="consulta">Digite sua pesquisa: </label>
+        <input type="text" required>
+        <button>Pesquisar</button>
+    </form>
 </body>
 </html>
